@@ -49,6 +49,9 @@ cupt (1.3.0) UNRELEASED; urgency=low
           (Closes: #553629)
         - Check that 'cupt::worker::archives-space-limit' is numeric. Thanks
           to Cyril Brulebois.
+        - While splitting heterogeneous actions, set '--force-breaks' to all
+          non-trivial actions in addition to '--force-depends'.
+          Thanks to James Vega. (Closes: #556014)
     - Config:
       - Fixed the typo to properly don't check option names for all
         'unattended-upgrade::*' options. Thanks to Jean-Christophe Dubacq.
